--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-language: generic
+language: minimal
 dist: trusty
 sudo: required
 
@@ -10,7 +10,11 @@ git:
 
 before_script:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then 
-      docker build -t fuzzylite -f Dockerfile --build-arg CXX_COMPILER=${CXX_COMPILER} . ;
+      if [[ "$CXX_COMPILER" == "clang++" ]]; then 
+        docker build -t fuzzylite -f Dockerfile --build-arg CXX_COMPILER="clang" . ;
+      else
+        docker build -t fuzzylite -f Dockerfile --build-arg CXX_COMPILER=${CXX_COMPILER} . ;
+      fi
     fi
 
 script:
@@ -26,6 +30,7 @@ script:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then 
       docker run -t fuzzylite documentation ;
     fi
+
 ##MacOSX
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then 
       cd fuzzylite/ ;
@@ -36,11 +41,38 @@ script:
       cd fuzzylite/ ;
       ./build.sh debug ;
     fi
+
 matrix:
   include:
-############################################################################
-# MacOSX
-############################################################################
+## Linux ##
+#clang
+    - os: linux
+      compiler: clang
+      env: CXX_COMPILER=clang++ FL_CPP98=OFF FL_USE_FLOAT=OFF
+    - os: linux
+      compiler: clang
+      env: CXX_COMPILER=clang++ FL_CPP98=OFF FL_USE_FLOAT=ON
+    - os: linux
+      compiler: clang
+      env: CXX_COMPILER=clang++ FL_CPP98=ON FL_USE_FLOAT=OFF
+    - os: linux
+      compiler: clang
+      env: CXX_COMPILER=clang++ FL_CPP98=ON FL_USE_FLOAT=ON
+#g++
+    - os: linux
+      compiler: g++
+      env: CXX_COMPILER=g++ FL_CPP98=OFF FL_USE_FLOAT=OFF
+    - os: linux
+      compiler: g++
+      env: CXX_COMPILER=g++ FL_CPP98=OFF FL_USE_FLOAT=ON
+    - os: linux
+      compiler: g++
+      env: CXX_COMPILER=g++ FL_CPP98=ON FL_USE_FLOAT=OFF
+    - os: linux
+      compiler: g++
+      env: CXX_COMPILER=g++ FL_CPP98=ON FL_USE_FLOAT=ON
+
+## MacOSX ##
     - os: osx
       osx_image: xcode9
       compiler: clang
@@ -57,226 +89,6 @@ matrix:
       osx_image: xcode9
       compiler: clang
       env: CXX_COMPILER=clang FL_CPP98=ON FL_USE_FLOAT=ON
-############################################################################
-# Latest clang and g++
-############################################################################
-#clang-4.0
-    - os: linux
-      compiler: clang
-      env: CXX_COMPILER=clang++-4.0 FL_CPP98=OFF FL_USE_FLOAT=OFF
-    - os: linux
-      compiler: clang
-      env: CXX_COMPILER=clang++-4.0 FL_CPP98=OFF FL_USE_FLOAT=ON
-    - os: linux
-      compiler: clang
-      env: CXX_COMPILER=clang++-4.0 FL_CPP98=ON FL_USE_FLOAT=OFF
-    - os: linux
-      compiler: clang
-      env: CXX_COMPILER=clang++-4.0 FL_CPP98=ON FL_USE_FLOAT=ON
-#g++-7
-    - os: linux
-      compiler: g++
-      env: CXX_COMPILER=g++-7 FL_CPP98=OFF FL_USE_FLOAT=OFF
-    - os: linux
-      compiler: g++
-      env: CXX_COMPILER=g++-7 FL_CPP98=OFF FL_USE_FLOAT=ON
-    - os: linux
-      compiler: g++
-      env: CXX_COMPILER=g++-7 FL_CPP98=ON FL_USE_FLOAT=OFF
-    - os: linux
-      compiler: g++
-      env: CXX_COMPILER=g++-7 FL_CPP98=ON FL_USE_FLOAT=ON
-############################################################################
-# clang
-############################################################################
-#clang-3.9
-    - os: linux
-      compiler: clang
-      env: CXX_COMPILER=clang++-3.9 FL_CPP98=OFF FL_USE_FLOAT=OFF
-    - os: linux
-      compiler: clang
-      env: CXX_COMPILER=clang++-3.9 FL_CPP98=OFF FL_USE_FLOAT=ON
-    - os: linux
-      compiler: clang
-      env: CXX_COMPILER=clang++-3.9 FL_CPP98=ON FL_USE_FLOAT=OFF
-    - os: linux
-      compiler: clang
-      env: CXX_COMPILER=clang++-3.9 FL_CPP98=ON FL_USE_FLOAT=ON
-#clang-3.8
-    - os: linux
-      compiler: clang
-      env: CXX_COMPILER=clang++-3.8 FL_CPP98=OFF FL_USE_FLOAT=OFF
-    - os: linux
-      compiler: clang
-      env: CXX_COMPILER=clang++-3.8 FL_CPP98=OFF FL_USE_FLOAT=ON
-    - os: linux
-      compiler: clang
-      env: CXX_COMPILER=clang++-3.8 FL_CPP98=ON FL_USE_FLOAT=OFF
-    - os: linux
-      compiler: clang
-      env: CXX_COMPILER=clang++-3.8 FL_CPP98=ON FL_USE_FLOAT=ON
-#clang-3.7
-    - os: linux
-      compiler: clang
-      env: CXX_COMPILER=clang++-3.7 FL_CPP98=OFF FL_USE_FLOAT=OFF
-    - os: linux
-      compiler: clang
-      env: CXX_COMPILER=clang++-3.7 FL_CPP98=OFF FL_USE_FLOAT=ON
-    - os: linux
-      compiler: clang
-      env: CXX_COMPILER=clang++-3.7 FL_CPP98=ON FL_USE_FLOAT=OFF
-    - os: linux
-      compiler: clang
-      env: CXX_COMPILER=clang++-3.7 FL_CPP98=ON FL_USE_FLOAT=ON
-#clang-3.6
-    - os: linux
-      compiler: clang
-      env: CXX_COMPILER=clang++-3.6 FL_CPP98=OFF FL_USE_FLOAT=OFF
-    - os: linux
-      compiler: clang
-      env: CXX_COMPILER=clang++-3.6 FL_CPP98=OFF FL_USE_FLOAT=ON
-    - os: linux
-      compiler: clang
-      env: CXX_COMPILER=clang++-3.6 FL_CPP98=ON FL_USE_FLOAT=OFF
-    - os: linux
-      compiler: clang
-      env: CXX_COMPILER=clang++-3.6 FL_CPP98=ON FL_USE_FLOAT=ON
-#clang-3.5
-    - os: linux
-      compiler: clang
-      env: CXX_COMPILER=clang++-3.5 FL_CPP98=OFF FL_USE_FLOAT=OFF
-    - os: linux
-      compiler: clang
-      env: CXX_COMPILER=clang++-3.5 FL_CPP98=OFF FL_USE_FLOAT=ON
-    - os: linux
-      compiler: clang
-      env: CXX_COMPILER=clang++-3.5 FL_CPP98=ON FL_USE_FLOAT=OFF
-    - os: linux
-      compiler: clang
-      env: CXX_COMPILER=clang++-3.5 FL_CPP98=ON FL_USE_FLOAT=ON
-############################################################################
-# g++
-############################################################################
-#g++-6
-    - os: linux
-      compiler: g++
-      env: CXX_COMPILER=g++-6 FL_CPP98=OFF FL_USE_FLOAT=OFF
-    - os: linux
-      compiler: g++
-      env: CXX_COMPILER=g++-6 FL_CPP98=OFF FL_USE_FLOAT=ON
-    - os: linux
-      compiler: g++
-      env: CXX_COMPILER=g++-6 FL_CPP98=ON FL_USE_FLOAT=OFF
-    - os: linux
-      compiler: g++
-      env: CXX_COMPILER=g++-6 FL_CPP98=ON FL_USE_FLOAT=ON
-#g++-5
-    - os: linux
-      compiler: g++
-      env: CXX_COMPILER=g++-5 FL_CPP98=OFF FL_USE_FLOAT=OFF
-    - os: linux
-      compiler: g++
-      env: CXX_COMPILER=g++-5 FL_CPP98=OFF FL_USE_FLOAT=ON
-    - os: linux
-      compiler: g++
-      env: CXX_COMPILER=g++-5 FL_CPP98=ON FL_USE_FLOAT=OFF
-    - os: linux
-      compiler: g++
-      env: CXX_COMPILER=g++-5 FL_CPP98=ON FL_USE_FLOAT=ON
-#g++-4.9
-    - os: linux
-      compiler: g++
-      env: CXX_COMPILER=g++-4.9 FL_CPP98=OFF FL_USE_FLOAT=OFF
-    - os: linux
-      compiler: g++
-      env: CXX_COMPILER=g++-4.9 FL_CPP98=OFF FL_USE_FLOAT=ON
-    - os: linux
-      compiler: g++
-      env: CXX_COMPILER=g++-4.9 FL_CPP98=ON FL_USE_FLOAT=OFF
-    - os: linux
-      compiler: g++
-      env: CXX_COMPILER=g++-4.9 FL_CPP98=ON FL_USE_FLOAT=ON
-#g++-4.8
-    - os: linux
-      compiler: g++
-      env: CXX_COMPILER=g++-4.8 FL_CPP98=OFF FL_USE_FLOAT=OFF
-    - os: linux
-      compiler: g++
-      env: CXX_COMPILER=g++-4.8 FL_CPP98=OFF FL_USE_FLOAT=ON
-    - os: linux
-      compiler: g++
-      env: CXX_COMPILER=g++-4.8 FL_CPP98=ON FL_USE_FLOAT=OFF
-    - os: linux
-      compiler: g++
-      env: CXX_COMPILER=g++-4.8 FL_CPP98=ON FL_USE_FLOAT=ON
-#g++-4.7
-    - os: linux
-      compiler: g++
-      env: CXX_COMPILER=g++-4.7 FL_CPP98=OFF FL_USE_FLOAT=OFF
-    - os: linux
-      compiler: g++
-      env: CXX_COMPILER=g++-4.7 FL_CPP98=OFF FL_USE_FLOAT=ON
-    - os: linux
-      compiler: g++
-      env: CXX_COMPILER=g++-4.7 FL_CPP98=ON FL_USE_FLOAT=OFF
-    - os: linux
-      compiler: g++
-      env: CXX_COMPILER=g++-4.7 FL_CPP98=ON FL_USE_FLOAT=ON
-############################################################################
-# Obsolete compilers
-############################################################################
-# #clang-3.4 does not install properly in ubuntu (clang++-3.4 command not found)
-#     - os: linux
-#       compiler: clang
-#       env: CXX_COMPILER=clang++-3.4 FL_CPP98=OFF FL_USE_FLOAT=OFF
-#     - os: linux
-#       compiler: clang
-#       env: CXX_COMPILER=clang++-3.4 FL_CPP98=OFF FL_USE_FLOAT=ON
-#     - os: linux
-#       compiler: clang
-#       env: CXX_COMPILER=clang++-3.4 FL_CPP98=ON FL_USE_FLOAT=OFF
-#     - os: linux
-#       compiler: clang
-#       env: CXX_COMPILER=clang++-3.4 FL_CPP98=ON FL_USE_FLOAT=ON
-# #clang-3.3 does not install properly in ubuntu (clang++-3.4 command not found)
-#     - os: linux
-#       compiler: clang
-#       env: CXX_COMPILER=clang++-3.3 FL_CPP98=OFF FL_USE_FLOAT=OFF
-#     - os: linux
-#       compiler: clang
-#       env: CXX_COMPILER=clang++-3.3 FL_CPP98=OFF FL_USE_FLOAT=ON
-#     - os: linux
-#       compiler: clang
-#       env: CXX_COMPILER=clang++-3.3 FL_CPP98=ON FL_USE_FLOAT=OFF
-#     - os: linux
-#       compiler: clang
-#       env: CXX_COMPILER=clang++-3.3 FL_CPP98=ON FL_USE_FLOAT=ON
-# #g++-4.6 does not have an installation candidate in ubuntu
-#     - os: linux
-#       compiler: g++
-#       env: CXX_COMPILER=g++-4.6 FL_CPP98=OFF FL_USE_FLOAT=OFF
-#     - os: linux
-#       compiler: g++
-#       env: CXX_COMPILER=g++-4.6 FL_CPP98=OFF FL_USE_FLOAT=ON
-#     - os: linux
-#       compiler: g++
-#       env: CXX_COMPILER=g++-4.6 FL_CPP98=ON FL_USE_FLOAT=OFF
-#     - os: linux
-#       compiler: g++
-#       env: CXX_COMPILER=g++-4.6 FL_CPP98=ON FL_USE_FLOAT=ON
-# #g++-4.5 does not have an installation candidate in ubuntu
-#     - os: linux
-#       compiler: g++
-#       env: CXX_COMPILER=g++-4.5 FL_CPP98=OFF FL_USE_FLOAT=OFF
-#     - os: linux
-#       compiler: g++
-#       env: CXX_COMPILER=g++-4.5 FL_CPP98=OFF FL_USE_FLOAT=ON
-#     - os: linux
-#       compiler: g++
-#       env: CXX_COMPILER=g++-4.5 FL_CPP98=ON FL_USE_FLOAT=OFF
-#     - os: linux
-#       compiler: g++
-#       env: CXX_COMPILER=g++-4.5 FL_CPP98=ON FL_USE_FLOAT=ON
 
 notifications:
   email:
