--- a/.github/workflows/linux-build.yml
+++ b/.github/workflows/linux-build.yml
@@ -13,13 +13,14 @@ jobs:
     strategy: 
       fail-fast: false
       matrix:
-        use_cxx: ["g++"]
+        use_cxx: ["clang"]
         use_cpp98: ["OFF"]
         use_float: ["OFF"]
 
     steps:
     - uses: actions/checkout@v2
-    - name: Building FuzzyLite (Release and Debug)
+    
+    - name: Build FuzzyLite (Release)
       working-directory: fuzzylite
       env: 
         FL_CPP98: ${{ matrix.use_cpp98 }}
@@ -27,4 +28,14 @@ jobs:
         CXX: ${{ matrix.use_cxx}}
         FL_BUILD_TESTS: "ON"
       run: |
-        bash build.sh 
+        bash build.sh release
+    
+    - name: Build FuzzyLite (Debug)
+      working-directory: fuzzylite
+      env: 
+        FL_CPP98: ${{ matrix.use_cpp98 }}
+        FL_USE_FLOAT: ${{ matrix.use_float }}
+        CXX: ${{ matrix.use_cxx}}
+        FL_BUILD_TESTS: "ON"
+      run: |
+        bash build.sh debug
