--- a/.github/workflows/linux-build.yml
+++ b/.github/workflows/linux-build.yml
@@ -13,9 +13,11 @@ jobs:
     strategy: 
       fail-fast: false
       matrix:
-        use_cxx: ["clang"]
+        use_cxx: ["clang++"]
+        build_type: ["release", "debug"]
         use_cpp98: ["OFF"]
         use_float: ["OFF"]
+
 
     steps:
     - uses: actions/checkout@v2
@@ -25,7 +27,7 @@ jobs:
       env: 
         FL_CPP98: ${{ matrix.use_cpp98 }}
         FL_USE_FLOAT: ${{ matrix.use_float }}
-        CXX: ${{ matrix.use_cxx}}
+        CXX: ${{ matrix.use_cxx }}
         FL_BUILD_TESTS: "ON"
       run: |
         bash build.sh release
