--- a/.github/workflows/linux-build.yml
+++ b/.github/workflows/linux-build.yml
@@ -13,11 +13,10 @@ jobs:
     strategy: 
       fail-fast: false
       matrix:
-        use_cxx: ["clang++"]
         build_type: ["release", "debug"]
-        use_cpp98: ["OFF"]
+        use_cxx: ["clang++", "g++"]
+        use_cpp98: ["OFF", "ON"]
         use_float: ["OFF"]
-
 
     steps:
     - uses: actions/checkout@v2
@@ -30,14 +29,4 @@ jobs:
         CXX: ${{ matrix.use_cxx }}
         FL_BUILD_TESTS: "ON"
       run: |
-        bash build.sh release
-    
-    - name: Build FuzzyLite (Debug)
-      working-directory: fuzzylite
-      env: 
-        FL_CPP98: ${{ matrix.use_cpp98 }}
-        FL_USE_FLOAT: ${{ matrix.use_float }}
-        CXX: ${{ matrix.use_cxx}}
-        FL_BUILD_TESTS: "ON"
-      run: |
-        bash build.sh debug
+        bash build.sh ${{ matrix.build_type }}
