--- a/.github/workflows/linux-build-pull-request.yml
+++ b/.github/workflows/linux-build-pull-request.yml
@@ -1,10 +1,8 @@
 name: Build FuzzyLite C++
 
 on:
-  push:
-    branches: [ main, '**' ]
   pull_request:
-    branches: [ main, '**' ]
+    branches: [ main ]
 
 jobs:
   build:
