--- a/.github/workflows/windows-build-push.yml
+++ b/.github/workflows/windows-build-push.yml
@@ -12,7 +12,6 @@ jobs:
       fail-fast: false
       matrix:
         build_type: ["release"]
-        use_cxx: ["clang++"]
         use_cpp98: ["OFF"]
         use_float: ["OFF"]
 
@@ -24,10 +23,10 @@ jobs:
 
     - name: Building FuzzyLite
       working-directory: fuzzylite
+      shell: cmd
       env: 
         FL_CPP98: ${{ matrix.use_cpp98 }}
         FL_USE_FLOAT: ${{ matrix.use_float }}
-        CXX: ${{ matrix.use_cxx }}
         FL_BUILD_TESTS: "ON"
       run: |
         build.bat ${{ matrix.build_type }}
