--- a/.github/workflows/windows-build-push.yml
+++ b/.github/workflows/windows-build-push.yml
@@ -1,4 +1,4 @@
-name: FuzzyLite (Linux) [Push]
+name: FuzzyLite (Windows) [Push]
 
 on:
   push:
@@ -6,25 +6,25 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     
     strategy: 
       fail-fast: false
       matrix:
         build_type: ["release"]
-        use_cxx: ["clang++"]
         use_cpp98: ["OFF"]
         use_float: ["OFF"]
 
     steps:
     - uses: actions/checkout@v2
-    
+    - uses: ilammy/msvc-dev-cmd@v1
+
     - name: Building FuzzyLite
       working-directory: fuzzylite
+      shell: cmd
       env: 
         FL_CPP98: ${{ matrix.use_cpp98 }}
         FL_USE_FLOAT: ${{ matrix.use_float }}
-        CXX: ${{ matrix.use_cxx }}
         FL_BUILD_TESTS: "ON"
       run: |
-        bash build.sh ${{ matrix.build_type }}
+        build.bat ${{ matrix.build_type }}
