Fully build `main` on push and pull request. Simply build branches `build/**`

--- a/.github/workflows/windows-build-push.yml
+++ b/.github/workflows/windows-build-push.yml
@@ -2,7 +2,7 @@ name: FuzzyLite (Windows) [Push]
 
 on:
   push:
-    branches: [ "main", "build/**" ]
+    branches: [ "build/**" ]
 
 jobs:
   build:
