--- a/.github/workflows/linux-build-pull-request.yml
+++ b/.github/workflows/linux-build-pull-request.yml
@@ -2,7 +2,9 @@ name: FuzzyLite (Linux) [Pull Request]
 
 on:
   pull_request:
-    branches: [ main ]
+    branches: [ "main" ]
+  push: 
+    branches: [ "main" ]
 
 jobs:
   build:
