--- a/.github/workflows/linux-build-push.yml
+++ b/.github/workflows/linux-build-push.yml
@@ -2,7 +2,7 @@ name: FuzzyLite (Linux) [Push]
 
 on:
   push:
-    branches: [ "main", "build/**" ]
+    branches: [ "build/**" ]
 
 jobs:
   build:
