--- a/.github/workflows/windows-build-pull-request.yml
+++ b/.github/workflows/windows-build-pull-request.yml
@@ -3,6 +3,8 @@ name: FuzzyLite (Windows) [Pull Request]
 on:
   pull_request:
     branches: [ main ]
+  push:
+    branches: [ main ]
 
 jobs:
   build:
