--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -5,6 +5,9 @@ on:
     branches: [ "main" ]
   push: 
     branches: [ "main" ]
+  schedule: 
+    # run monthly on the first day
+    - cron: "0 0 1 * * "
 
 jobs:
   build:
