--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -2,9 +2,9 @@ name: FuzzyLite (Windows)
 
 on:
   pull_request:
-    branches: [ "main" ]
+    branches: [ "main", "development" ]
   push: 
-    branches: [ "main" ]
+    branches: [ "main", "development" ]
   schedule: 
     # run monthly on the first day
     - cron: "0 0 1 * * "
