--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -21,7 +21,7 @@ jobs:
           - check: "fuzzylite/src"
             exclude: ""
           - check: "fuzzylite/test"
-            exclude: "fuzzylite/test/catch.hpp"
+            exclude: "fuzzylite/test/catch2/catch.hpp"
 
     steps:
     - uses: actions/checkout@v2
