--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -1,27 +1,27 @@
 name: FuzzyLite (Windows)
 
 on:
-  pull_request:
-    branches: [ "main" ]
   push: 
     branches: [ "main" ]
-  schedule: 
-    # run monthly on the first day
-    - cron: "0 0 1 * * "
+  pull_request:
+    branches: [ "main", "feature/*" ]
+
 
 jobs:
   build:
     runs-on: windows-latest
-    
+    name: Windows-VisualStudio-${{matrix.platform}}
+
     strategy: 
       fail-fast: false
       matrix:
+        platform: ['x64', 'win32']
         build_type: ["release", "debug"]
         use_cpp98: ["OFF", "ON"]
         use_float: ["OFF", "ON"]
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
     - uses: ilammy/msvc-dev-cmd@v1
 
     - name: Building FuzzyLite
@@ -30,6 +30,7 @@ jobs:
       env: 
         FL_CPP98: ${{ matrix.use_cpp98 }}
         FL_USE_FLOAT: ${{ matrix.use_float }}
-        FL_BUILD_TESTS: "ON"
+        FL_BUILD_TESTS: "OFF"
       run: |
-        build.bat ${{ matrix.build_type }}
+          cmake -B build/${{ matrix.build_type }} -G"NMake Makefiles" -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} .
+          cmake --build build/${{ matrix.build_type }}
