--- a/.github/workflows/WindowsFullBuild.yml
+++ b/.github/workflows/WindowsFullBuild.yml
@@ -30,4 +30,4 @@ jobs:
           FL_BUILD_TESTS: "OFF"
         run: |
           cmake -B build/${{ matrix.build_type }} -G"NMake Makefiles" -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} .
-          cmake --build build/${{ matrix.build_type }}
+          cmake --build build/${{ matrix.build_type }} --parallel
