--- a/.github/workflows/LinuxFullBuild.yml
+++ b/.github/workflows/LinuxFullBuild.yml
@@ -28,4 +28,4 @@ jobs:
           FL_BUILD_TESTS: "OFF"
         run: |
           cmake -B build/${{ matrix.build_type }} -G"Unix Makefiles" -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} .
-          cmake --build build/${{ matrix.build_type }}
+          cmake --build build/${{ matrix.build_type }} --parallel
