--- a/.github/workflows/WindowsFullBuild.yml
+++ b/.github/workflows/WindowsFullBuild.yml
@@ -1,4 +1,4 @@
-name: FuzzyLite (Windows)
+name: Windows Full Build
 
 on:
   push:
@@ -7,12 +7,11 @@ on:
 jobs:
   build:
     runs-on: windows-latest
-    name: Windows-VisualStudio-${{matrix.platform}}
 
     strategy:
       fail-fast: false
       matrix:
-        platform: [ 'x64', 'win32' ]
+        platform: [ "x64", "win32" ]
         build_type: [ "release", "debug" ]
         use_cpp98: [ "OFF", "ON" ]
         use_float: [ "OFF", "ON" ]
