--- a/.github/workflows/WindowsQuickBuild.yml
+++ b/.github/workflows/WindowsQuickBuild.yml
@@ -12,7 +12,7 @@ jobs:
       fail-fast: false
       matrix:
         build_type: [ "release" ]
-        platform: [ 'x64', 'win32' ]
+        platform: [ "x64" ]
 
     steps:
       - uses: actions/checkout@v4
