--- a/.github/workflows/LinuxFullBuild.yml
+++ b/.github/workflows/LinuxFullBuild.yml
@@ -2,17 +2,17 @@ name: Linux Full Build
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ ]
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+  build-clang:
+    runs-on: ubuntu-22.04
 
     strategy:
       fail-fast: false
       matrix:
+        compiler_version: [ "13", "14", "15"]
         build_type: [ "release", "debug" ]
-        use_cxx: [ "clang++", "g++" ]
         use_cpp98: [ "OFF", "ON" ]
         use_float: [ "OFF", "ON" ]
 
@@ -24,8 +24,31 @@ jobs:
         env:
           FL_CPP98: ${{ matrix.use_cpp98 }}
           FL_USE_FLOAT: ${{ matrix.use_float }}
-          CXX: ${{ matrix.use_cxx }}
-          FL_BUILD_TESTS: "OFF"
+          CXX: clang++-${{ matrix.compiler_version }}
+        run: |
+          cmake -B build/${{ matrix.build_type }} -G"Unix Makefiles" -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} .
+          cmake --build build/${{ matrix.build_type }} --parallel
+
+  build-gcc:
+    runs-on: ubuntu-22.04
+
+    strategy:
+      fail-fast: false
+      matrix:
+        compiler_version: [ "9", "10", "11", "12", "13" ]
+        build_type: [ "release" ]
+        use_cpp98: [ "OFF", "ON" ]
+        use_float: [ "OFF", "ON" ]
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Building FuzzyLite
+        working-directory: fuzzylite
+        env:
+          FL_CPP98: ${{ matrix.use_cpp98 }}
+          FL_USE_FLOAT: ${{ matrix.use_float }}
+          CXX: g++-${{ matrix.compiler_version }}
         run: |
           cmake -B build/${{ matrix.build_type }} -G"Unix Makefiles" -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} .
           cmake --build build/${{ matrix.build_type }} --parallel
