--- a/.github/workflows/WindowsFullBuild.yml
+++ b/.github/workflows/WindowsFullBuild.yml
@@ -15,7 +15,7 @@ jobs:
         build_type: [ "release", "debug" ]
         use_cpp98: [ "OFF", "ON" ]
         use_float: [ "OFF", "ON" ]
-
+    
     steps:
       - uses: actions/checkout@v4
       - uses: ilammy/msvc-dev-cmd@v1
@@ -26,6 +26,7 @@ jobs:
         env:
           FL_CPP98: ${{ matrix.use_cpp98 }}
           FL_USE_FLOAT: ${{ matrix.use_float }}
+          FL_BUILD_TESTS: OFF
         run: |
           cmake -B build/${{ matrix.build_type }} -G"NMake Makefiles" -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} .
           cmake --build build/${{ matrix.build_type }} --parallel
