--- a/.github/workflows/WindowsMediumBuild.yml
+++ b/.github/workflows/WindowsMediumBuild.yml
@@ -22,9 +22,7 @@ jobs:
       - name: Building FuzzyLite
         working-directory: fuzzylite
         shell: cmd
-        env:
-          FL_BUILD_TESTS: OFF
         run: |
-          cmake -B build/${{ matrix.build_type }} -G"NMake Makefiles" -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} .
+          cmake -B build/${{ matrix.build_type }} -G"NMake Makefiles" -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} -DFL_BUILD_TESTS=OFF .
           cmake --build build/${{ matrix.build_type }} --parallel
           ctest --test-dir build/${{ matrix.build_type }}
